@@ -8,10 +8,10 @@
 
 /////////////// END OF PROTOCOL INTERNAL CODE    ///////////////////
 
-int init_proto_http_connect_struct() {
-    protocol_t * protocol_struct = init_protocol_struct_for_registration(PROTO_HTTP_CONNECT, PROTO_HTTP_CONNECT_ALIAS);
+int init_proto_foxnews_struct() {
+    protocol_t * protocol_struct = init_protocol_struct_for_registration(PROTO_FOXNEWS, PROTO_FOXNEWS_ALIAS);
     if (protocol_struct != NULL) { 
-        return register_protocol(protocol_struct, PROTO_HTTP_CONNECT);
+        return register_protocol(protocol_struct, PROTO_FOXNEWS);
     } else {
         return 0;
     }
